@@ -54,6 +54,7 @@ dependencies {
     compile group: 'javax.validation', name: 'validation-api', version: '1.1.0.Final'
     compile group: 'org.hibernate', name: 'hibernate-validator', version: '5.1.3.Final'
 
+    compile group: 'org.skyscreamer', name: 'jsonassert', version: '0.9.0'
     compile group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: vers.jackson_core
 
     compile group: 'org.slf4j', name: 'jcl-over-slf4j', version: vers.slf4j_bridge
@@ -72,4 +73,31 @@ configurations.all {
 
 war {
     archiveName = 'travian.war'
+}
+test {
+    // enable TestNG support (default is JUnit)
+    useTestNG()
+
+    // set a system property for the test JVM(s)
+    systemProperty 'some.prop', 'value'
+
+    // show standard out and standard error of the test JVM(s) on the console
+    testLogging.showStandardStreams = true
+
+    // set heap size for the test JVM(s)
+    minHeapSize = "128m"
+    maxHeapSize = "512m"
+
+    // set JVM arguments for the test JVM(s)
+    jvmArgs '-XX:MaxPermSize=256m'
+
+    // listen to events in the test execution lifecycle
+    beforeTest { descriptor ->
+        logger.lifecycle("Running test: " + descriptor)
+    }
+
+    // listen to standard out and standard error of the test JVM(s)
+    onOutput { descriptor, event ->
+        logger.lifecycle("Test: " + descriptor + " produced standard out/err: " + event.message)
+    }
 }
